--- a/example.env
+++ b/example.env
@@ -1,1 +1,6 @@
 SERVER_PORT='8080'
+MONGO_PORT='27017'
+MONGO_VERSION='4.4.21'
+MONGO_URI="mongodb://localhost:${MONGO_PORT}"
+MONGO_INITDB_ROOT_USERNAME='CHANGE_THIS'
+MONGO_INITDB_ROOT_PASSWORD='CHANGE_THIS'
