Setup a LINE Bot channel secret and token

--- a/example.env
+++ b/example.env
@@ -4,3 +4,5 @@ MONGO_VERSION='4.4.21'
 MONGO_URI="mongodb://localhost:${MONGO_PORT}"
 MONGO_INITDB_ROOT_USERNAME='CHANGE_THIS'
 MONGO_INITDB_ROOT_PASSWORD='CHANGE_THIS'
+LINEBOT_CHANNEL_SECRET='CHANGE_THIS'
+LINEBOT_CHANNEL_TOKEN='CHANGE_THIS'
